# arkan_POC

./: .gitignore  App.js  Cargo.toml  README.md  app.json  arkan1.kicad_pcb  arkan1.kicad_pro  arkan1.kicad_sch  package-lock.json  package.json  styles.js  usb_server.py  ~arkan1.kicad_sch.lck
android/: build.gradle  gradle.properties  settings.gradle
android/android/app/src/main/assets/: index.android.bundle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/arkan/: MainActivity.kt  MainApplication.kt
android/app/src/main/res/raw/: keep.xml
android/app/src/main/res/values/: strings.xml
ios/: Podfile
ios/ARKAN/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/ARKAN.xcodeproj/: project.pbxproj
ios/ARKAN.xcodeproj/xcshareddata/xcschemes/: ARKAN.xcscheme
receiver/arkan_receiver/: Cargo.toml
receiver/arkan_receiver/.cargo/: config.toml
receiver/arkan_receiver/src/: decryption.rs  main.rs
src/: encryption.rs  gps_proccess.rs  main.rs  sleep.rs
version_history/: README.md
