[package]
name = "arkan_POC"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
embedded-hal = "0.2.7"
panic-halt = "0.2.0"
rp-pico = "0.9.0"
usb-device = "0.3.2"
usbd-serial = "0.2.2"
heapless = "0.8"
chacha20 = { version = "0.9", default-features = false }
nb = "1.0"
sx127x_lora = "0.3.1"

[profile.release]
debug = true
